docker-registry/k8s/arm/registry-front2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-front2
  namespace: registry
spec:
  selector:
    matchLabels:
      name: registry-front2
  template:
    metadata:
      labels:
        name: registry-front2
        app: registry-front2
      annotations:
        podinfo: "コンテナレジストリサーバフロント2"
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: kubernetes.io/os
                  operator: In
                  values:
                    - linux
                - key: kubernetes.io/arch
                  operator: In
                  values:
                    - arm
                    - arm64
      tolerations:
      - key: node-role.kubernetes.io/master
        effect: NoSchedule
      - key: node-role.kubernetes.io/control-plane
        effect: NoSchedule
      containers:
      - name: registry-front
        image: klausmeyer/docker-registry-browser:1.6.0
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 0.4
            memory: 500Mi
          requests:
            cpu: 0.2
            memory: 200Mi
      terminationGracePeriodSeconds: 30
    #   hostNetwork: true
    #   hostPID: true
---
apiVersion: v1
kind: Service
metadata:
    name: registry-front2
    namespace: registry
spec:
  selector:
    app: registry-front2
  ports:
    - port: 8080
      targetPort: 8080
  # type: ClusterIP
  clusterIP: None
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-front2
  namespace: registry
spec:
  ingressClassName: nginx
  rules:
  - host: registry2.bookserver.home
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: registry-front2
            port:
              number: 8080
